istio_examples/RouteRule/ingress-local.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: risingstack.training.kubernetes.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 5000
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
