istio_examples/RouteRule/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /api.*
        backend:
          serviceName: api
          servicePort: 5000
      - path: /.*
        backend:
          serviceName: ui
          servicePort: 80
